--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,29 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+#root{
+    --bg:#3a0ca3;
+    --about:#0d00a4;
+    /* --bg1:# */
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.main{
+    /* border: 2px solid red; */
+    display: flex;
+    height: 10vh;
+    justify-content: space-around;
+    align-items: center;
+    box-shadow: 0 0 10px black;
+    margin-bottom: 50px;
+}
+.main .logo{
+      /* border: 2px solid green; */
+      width: 30vw;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-bottom: 20px;
+}
+.main .navbar{
+    /* border: 2px solid yellow; */
+    width: 70vw;
+    display: flex;
+    justify-content:space-around;
+    /* align-items: center; */
 }
